<resources>
    <string name="app_name">GoApp</string>
    <string name="home">Home</string>
    <string name="setting">Settings</string>
    <string name="search">Search</string>
    <string name="delete">DELETE</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>


    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="title_version">Version</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="title_faq">FAQ</string>
    <string name="url_faq">https://www.google.com/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.google.com/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.google.com/</string>
    <string name="choose_email_client">Choose email client</string>


</resources>
